# trek

./: .gitignore  LICENSE  Makefile.in  README.md  configure.ac  getpar.c  main.c  setup.c
libopenbsd/: libopenbsd.h
